apps/harbor/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: harbor
  labels:
    name: harbor
    app.kubernetes.io/name: harbor
    istio-injection: enabled
